--- a/myproject/metal/static/market/register/register_style.css
+++ b/myproject/metal/static/market/register/register_style.css
@@ -1,11 +1,11 @@
 .wizard {
-    margin: 20px auto;
+    margin: 0px auto;
     background: #fff;
 }
 
 .wizard .nav-tabs {
     position: relative;
-    margin: 40px auto;
+    /*margin: 40px auto;*/
     margin-bottom: 0;
     border-bottom-color: #e0e0e0;
 }
@@ -34,9 +34,9 @@
 }
 
 span.round-tab {
-    width: 70px;
-    height: 70px;
-    line-height: 70px;
+    width: 35px;
+    height: 35px;
+    line-height: 35px;
     display: inline-block;
     border-radius: 100px;
     background: #fff;
@@ -45,7 +45,7 @@ span.round-tab {
     position: absolute;
     left: 0;
     text-align: center;
-    font-size: 25px;
+    font-size: 17px;
 }
 
 span.round-tab i {
@@ -68,7 +68,7 @@ span.round-tab:hover {
 }
 
 .wizard .nav-tabs > li {
-    width: 25%;
+    width: 20%;
 }
 
 .wizard li:after {
@@ -95,8 +95,8 @@ span.round-tab:hover {
 }
 
 .wizard .nav-tabs > li a {
-    width: 70px;
-    height: 70px;
+    width: 35px;
+    height: 35px;
     margin: 20px auto;
     border-radius: 100%;
     padding: 0;
