--- a/myproject/metal/templates/user_supplier/quotation_list.html
+++ b/myproject/metal/templates/user_supplier/quotation_list.html
@@ -38,9 +38,9 @@
                                     <td>{{ supplier.Address }}</td>
                                     <td><span class="label label-success">Approved</span></td>
                                     <td>
-                                        <a href='{% url "market_app:detail" supplier.pk %}'>View</a>
+                                        <a href='{% url "detail" supplier.pk %}'>View</a>
                                         <br>
-                                        <a href='{% url "market_app:detail" supplier.pk %}'>Request for Quote</a>
+                                        <a href='{% url "detail" supplier.pk %}'>Request for Quote</a>
                                     </td>
                                 </tr>
 
@@ -89,9 +89,9 @@
                                     <td>{{ supplier.Address }}</td>
                                     <td><span class="label label-success">Approved</span></td>
                                     <td>
-                                        <a href='{% url "market_app:detail" supplier.pk %}'>View</a>
+                                        <a href='{% url "detail" supplier.pk %}'>View</a>
                                         <br>
-                                        <a href='{% url "market_app:detail" supplier.pk %}'>Request for Quote</a>
+                                        <a href='{% url "detail" supplier.pk %}'>Request for Quote</a>
                                     </td>
                                 </tr>
 
@@ -141,9 +141,9 @@
                                     <td>{{ supplier.Address }}</td>
                                     <td><span class="label label-success">Approved</span></td>
                                     <td>
-                                        <a href='{% url "market_app:detail" supplier.pk %}'>View</a>
+                                        <a href='{% url "detail" supplier.pk %}'>View</a>
                                         <br>
-                                        <a href='{% url "market_app:detail" supplier.pk %}'>Request for Quote</a>
+                                        <a href='{% url "detail" supplier.pk %}'>Request for Quote</a>
                                     </td>
                                 </tr>
 
@@ -193,9 +193,9 @@
                                 <td>{{ supplier.Address }}</td>
                                 <td><span class="label label-success">Approved</span></td>
                                 <td>
-                                    <a href='{% url "market_app:detail" supplier.pk %}'>View</a>
+                                    <a href='{% url "detail" supplier.pk %}'>View</a>
                                     <br>
-                                    <a href='{% url "market_app:detail" supplier.pk %}'>Request for Quote</a>
+                                    <a href='{% url "detail" supplier.pk %}'>Request for Quote</a>
                                 </td>
                             </tr>
 
@@ -244,9 +244,9 @@
                                 <td>{{ supplier.Address }}</td>
                                 <td><span class="label label-success">Approved</span></td>
                                 <td>
-                                    <a href='{% url "market_app:detail" supplier.pk %}'>View</a>
+                                    <a href='{% url "detail" supplier.pk %}'>View</a>
                                     <br>
-                                    <a href='{% url "market_app:detail" supplier.pk %}'>Request for Quote</a>
+                                    <a href='{% url "detail" supplier.pk %}'>Request for Quote</a>
                                 </td>
                             </tr>
 
