--- a/myproject/metal/templates/user_supplier/rfq_list.html
+++ b/myproject/metal/templates/user_supplier/rfq_list.html
@@ -27,9 +27,9 @@
                                     <td>{{ supplier.Address }}</td>
                                     <td><span class="label label-success">Approved</span></td>
                                     <td>
-                                        <a href='{% url "market_app:detail" supplier.pk %}'>View</a>
+                                        <a href='{% url "detail" supplier.pk %}'>View</a>
                                         <br>
-                                        <a href='{% url "market_app:detail" supplier.pk %}'>Request for Quote</a>
+                                        <a href='{% url "detail" supplier.pk %}'>Request for Quote</a>
                                     </td>
                                 </tr>
 
