wizard logic added

--- a/myproject/metal/templates/register/index.html
+++ b/myproject/metal/templates/register/index.html
@@ -3,7 +3,7 @@
 
 {% block main_content %}
 
-    <form role="form" action="{% url 'register_user_index' %}" method="post">
+    <form id="#registration-form" role="form" action="{% url 'register_user_index' %}" method="post">
         {% csrf_token %}
 
         <div class="wizard">
@@ -41,7 +41,7 @@
                         </a>
                     </li>
                     <li role="presentation" class="disabled">
-                        <a href="#complete" data-toggle="tab" aria-controls="complete" role="tab" title="Complete">
+                        <a id="completeAnchor" href="#complete" data-toggle="tab" aria-controls="complete" role="tab" title="Complete">
                             <span class="round-tab">
                                 <i class="fa fa-flag-checkered"></i>
                             </span>
@@ -201,20 +201,14 @@
                                 </div>
                             </div>
 
-                            <!-- /.box-header -->
-                            <div class="box-body">
-
-
-                            </div>
-                            <!-- /.box-body -->
-
                         </div>
                     </div>
 
 
                     <ul class="list-inline pull-right">
                         <li>
-                            <button type="button" class="btn btn-primary next-step">Save and continue</button>
+                            <button id="btnNext" type="button" class="btn btn-primary next-step">Save and continue</button>
+                            <button id="btnSubmit" type="button" class="btn btn-primary next-step">Register</button>
                         </li>
                     </ul>
                 </div>
@@ -248,9 +242,6 @@
                             <button type="button" class="btn btn-default prev-step">Previous</button>
                         </li>
                         <li>
-                            <button type="button" class="btn btn-default next-step">Skip</button>
-                        </li>
-                        <li>
                             <button type="button" class="btn btn-primary btn-info-full next-step">Save and
                                 continue
                             </button>
@@ -270,11 +261,7 @@
                             <button type="button" class="btn btn-default prev-step">Previous</button>
                         </li>
                         <li>
-                            <button type="button" class="btn btn-default next-step">Skip</button>
-                        </li>
-                        <li>
-                            <button type="button" class="btn btn-primary btn-info-full next-step">Save and
-                                continue
+                            <button type="Submit" class="btn btn-primary btn-info-full next-step">Submit
                             </button>
                         </li>
                     </ul>
