--- a/myproject/metal/templates/registration/password_reset_form.html
+++ b/myproject/metal/templates/registration/password_reset_form.html
@@ -14,23 +14,23 @@
   <!-- Bootstrap 3.3.7 -->
 
 <!-- Bootstrap -->
-  <link rel="stylesheet" type="text/css"  href="{% static 'public_site' %}/css/bootstrap.css">
-  <link rel="stylesheet" type="text/css" href="{% static 'public_site' %}/fonts/font-awesome/css/font-awesome.css">
+  <link rel="stylesheet" type="text/css"  href="{% static 'public' %}/css/bootstrap.css">
+  <link rel="stylesheet" type="text/css" href="{% static 'public' %}/fonts/font-awesome/css/font-awesome.css">
   <script src="{% static 'market_app' %}/js/adminlte.min.js"></script>
     <!-- Theme style -->
-  <link rel="stylesheet" href="{% static 'market_app' %}/css/AdminLTE.min.css">
+  <link rel="stylesheet" href="{% static 'market' %}/css/AdminLTE.min.css">
   <!-- AdminLTE Skins. Choose a skin from the css/skins
        folder instead of downloading all of them to reduce the load. -->
-  <link rel="stylesheet" href="{% static 'market_app' %}/css/skins/_all-skins.min.css">
-  <link rel="stylesheet" href="{% static 'market_app/style.css' %}" >
+  <link rel="stylesheet" href="{% static 'market' %}/css/skins/_all-skins.min.css">
+  <link rel="stylesheet" href="{% static 'market/style.css' %}" >
 <!-- AdminLTE for demo purposes -->
   <script src="{% static 'market_app' %}/js/demo.js"></script>
 <!-- Stylesheet
     ================================================== -->
-  <link rel="stylesheet" type="text/css"  href="{% static 'public_site' %}/css/style.css">
-  <link rel="stylesheet" type="text/css" href="{% static 'public_site' %}/css/prettyPhoto.css">
+  <link rel="stylesheet" type="text/css"  href="{% static 'public' %}/css/style.css">
+  <link rel="stylesheet" type="text/css" href="{% static 'public' %}/css/prettyPhoto.css">
   <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700,800,600,300' rel='stylesheet' type='text/css'>
-  <script type="text/javascript" src="{% static 'public_site' %}/js/modernizr.custom.js"></script>
+  <script type="text/javascript" src="{% static 'public' %}/js/modernizr.custom.js"></script>
 
 <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
