--- a/myproject/metal/templates/shared/main_market.html
+++ b/myproject/metal/templates/shared/main_market.html
@@ -41,7 +41,8 @@
 
 {#    <link rel="stylesheet" type="text/css" href="https://rawgit.com/jonmiles/bootstrap-treeview/master/public/css/bootstrap-treeview.css">#}
     <script src="{% static 'market' %}/bower_components/jquery/dist/jquery.min.js"></script>
-    <script src="{% static 'market' %}/js/knockout-3.4.2.js"></script>
+{#    <script src="{% static 'market' %}/js/knockout-3.4.2.js"></script>#}
+    <script src="{% static 'market' %}/js/jquery.validate.js"></script>
     <link rel="stylesheet" href="{% static 'market' %}/typeahead/typeaheadStyle.css" >
 
 
