--- a/myproject/metal/templates/register/index.html
+++ b/myproject/metal/templates/register/index.html
@@ -3,7 +3,7 @@
 
 {% block main_content %}
 
-    <form id="#registration-form" role="form" action="{% url 'register_user_index' %}" method="post">
+    <form name="registration" id="#registration-form" role="form" action="{% url 'register_user_index' %}" method="post">
         {% csrf_token %}
 
         <div class="wizard">
@@ -68,8 +68,8 @@
                                         <div class="form-group">
                                             <label>Company Registration No. (UEN) <a>?</a> < *Add a link to
                                                 government website*</label>
-                                            <input name="MCompany_Id" type="number" class="form-control"
-                                                   placeholder="Your Company Name">
+                                            <input id="txt_company_uen" name="company_uen" type="number" class="form-control"
+                                                   placeholder="Your Company UEN">
                                             {% if BuyerVM.MCompany_Id.errors %}
 
                                                 <div class="alert alert-danger alert-dismissible">
@@ -85,7 +85,7 @@
 
                                         <div class="form-group">
                                             <label>Company Name</label>
-                                            <input name="MCompany_Id" type="number" class="form-control"
+                                            <input id="txt_company_name" name="company_name" type="number" class="form-control"
                                                    placeholder="Your Company Name">
                                             {% if BuyerVM.MCompany_Id.errors %}
 
@@ -102,7 +102,7 @@
 
                                         <div class="form-group">
                                             <label>Contact Number</label>
-                                            <input name="ContactNumber" type="text" class="form-control"
+                                            <input id="txt_contact_number" name="contact_number" type="text" class="form-control"
                                                    placeholder="Number for suppliers to reach you">
                                             {% if BuyerVM.ContactNumber.errors %}
 
@@ -118,7 +118,7 @@
                                         </div>
 
 
-                                        <div class="form-group">
+                                        <div id="selTags" class="form-group">
                                             <label>Tag</label>
                                             <select class="form-control select2" multiple="multiple" style="width: 100%;">
                                                 {% if tags %}
@@ -139,7 +139,7 @@
                                         <div class="form-group">
                                             <label>Name</label>
 
-                                            <input name="Username" type="text" class="form-control"
+                                            <input id="txt_user_name" name="user_name" type="text" class="form-control"
                                                    placeholder="Please enter your name">
                                             {% if BuyerVM.Username.errors %}
 
@@ -156,7 +156,7 @@
 
                                         <div class="form-group">
                                             <label>Job Title</label>
-                                            <input name="Title" type="text" class="form-control"
+                                            <input id="txt_job_title" name="title" type="text" class="form-control"
                                                    placeholder="Your job title at your company">
                                             {% if BuyerVM.Title.errors %}
 
@@ -173,7 +173,7 @@
 
                                         <div class="form-group">
                                             <label>Email Address</label>
-                                            <input name="EmailAddress" type="text" class="form-control"
+                                            <input id="txt_email_addr" name="email_address" type="text" class="form-control"
                                                    placeholder="Company email address">
                                             {% if BuyerVM.EmailAddress.errors %}
 
@@ -190,7 +190,7 @@
 
                                         <div class="form-group">
                                             <label>Password</label>
-                                            <input name="Password" type="password" class="form-control"
+                                            <input id="txt_password" name="password" type="password" class="form-control"
                                                    placeholder="Password to sign in later">
                                             {% if BuyerVM.Password.errors %}
 
@@ -225,7 +225,7 @@
                         <li>
                             <button id="btnNext" type="button" class="btn btn-primary next-step">Save and continue
                             </button>
-                            <button id="btnSubmit" type="button" class="btn btn-primary next-step">Register</button>
+                            <button id="btnSubmit" type="button" class="btn btn-primary next-step btnSubmit">Register</button>
                         </li>
                     </ul>
                 </div>
@@ -304,8 +304,7 @@
                             <button type="button" class="btn btn-default prev-step">Previous</button>
                         </li>
                         <li>
-                            <button type="Submit" class="btn btn-primary btn-info-full next-step">Submit
-                            </button>
+                            <button id="btnSubmit2" type="button" class="btn btn-primary next-step btnSubmit">Register</button>
                         </li>
                     </ul>
                 </div>
