Bug fixes for service repository, service of supplier service
updates on registeration wizard

updated rfq_view main file

--- a/myproject/metal/templates/user_supplier/rfq_view.html
+++ b/myproject/metal/templates/user_supplier/rfq_view.html
@@ -1,4 +1,4 @@
-{% extends "shared/main_buyer.html" %}
+{% extends "shared/main_supplier.html" %}
 
 {% load staticfiles %}
 {% block main_content %}
